tests/NormalTests/paczka1/fuzzy1/88070683.err
Error in line 5: BCUMoqqpM S994 41,7
Error in line 19: TlDCdFpIY1L S427 80,7
Error in line 26: TlDCdFpIY1L S994 53,9
Error in line 25: 9sKFqJHyk S17 77,4
Error in line 28: y09Pnho S994 82,3
Error in line 33: TlDCdFpIY1L A923 65,6
